# django-hybrid

./: .editorconfig  .gitignore  .travis.yml  README.md  runtest.py  runtests.py  setup.cfg  setup.py  tox.ini
dj_hybrid/: __init__.py  decorator.py  expander.py  py.typed  resolve.py  types.py
dj_hybrid/expression_wrapper/: base.py  convert.py  registry.py  types.py  wrap.py  wrappers.py
dj_hybrid/tests/: settings.py  test_control_flow.py  test_decorator.py  test_expander.py  test_expression_wrapper.py  utils.py
dj_hybrid/tests/expression_wrapper/: test_registry.py  test_wrap.py
dj_hybrid/tests/expression_wrapper/wrapper/: base.py  factory.py  test_expressionwrapper.py  test_f.py  test_random.py
django_hybrid/: expander.py  types.py  utils.py
django_hybrid/expression_wrapper/: base.py  types.py  wrap.py  wrappers.py
django_hybrid/tests/: settings.py  test_control_flow.py  test_decorator.py  test_expander.py  test_expression_wrapper.py  utils.py
django_hybrid/tests/expression_wrapper/: test_registry.py  test_wrap.py
django_hybrid/tests/expression_wrapper/wrapper/: base.py
django_properties/: decorators.py  expander.py  resolve.py  types.py  utils.py
django_properties/expression_wrapper/: __init__.py  base.py  registry.py  types.py  wrap.py  wrappers.py
django_properties/test/: settings.py
django_properties/tests/: settings.py  test.py  test_control_flow.py  test_decorator.py  test_expander.py  test_expression_wrapper.py  test_self.py  utils.py
django_properties/tests/expression_wrapper/: test_registry.py  test_wrap.py  test_wrappers.py
django_properties/tests/expression_wrapper/wrapper/: base.py  factory.py  models.py  test_f.py  test_value.py
