[metadata]
name = django_properties
version = 0.1.0
description = Provide a way to share logic across Django annotations, and Python
author = Anthony King
author-email = anthonydking@gmail.com
license = Apache-2.0
license-file = LICENSE


[options]
zip_safe = True
packages = find:
python_requires = >=3.4
install_requires =
    Django>=1.11
    typing
test_requires =
    pytest-django
    mypy
setup_requires =
    pytest-runner

[bdist_wheel]
universal = 1

[aliases]
test=pytest


[tool:pytest]
DJANGO_SETTINGS_MODULE = django_properties.tests.settings
python_files = tests.py test_*.py *_tests.py


[isort]
combine_as_imports = true
include_trailing_comma = true
known_first_party = django_properties
line_length = 120
multi_line_output = 3
not_skip = __init__.py
skip_glob = .?*
use_parentheses = true


[mypy]
# strict
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

# django doesn't have stubs yet
ignore_missing_imports = true

[mypy-django_properties.tests.*]
ignore_errors = true
