[metadata]
name = django_hybrid
version = 0.1.0
description = Provide a way to share logic across Django annotations, and Python
author = Anthony King
author-email = anthonydking@gmail.com
license = Apache-2.0
license-file = LICENSE


[options]
zip_safe = True
packages = find:
python_requires = >=3.5
install_requires =
    Django>=1.11
    typing
    typing_extensions
setup_requires =
    pytest-runner

[bdist_wheel]
universal = 1

[aliases]
test=pytest


[tool:pytest]
DJANGO_SETTINGS_MODULE = django_hybrid.tests.settings
python_files = tests.py test_*.py *_tests.py
addopts = --cov


[isort]
combine_as_imports = true
include_trailing_comma = true
known_first_party = django_hybrid
line_length = 120
multi_line_output = 3
not_skip = __init__.py
skip_glob = .?*
use_parentheses = true


[mypy]
# strict
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

# django doesn't have stubs yet
ignore_missing_imports = true

[mypy-django_hybrid.tests.*]
ignore_errors = true


[coverage:run]
branch = True
source = django_hybrid

[coverage:report]
exclude_lines =
    raise NotImplementedError
    ^\s*\.\.\.(?:\s*#.*)*$
    pass
    if TYPE_CHECKING:
omit =
    django_hybrid/tests/*
