[metadata]
name = django-hybrid
version = 0.2.0a2
description = Provide a way to share logic across Django annotations, and Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Anthony King
author-email = anthonydking@gmail.com
license = Apache-2.0
license-file = LICENSE
project_urls =
    Source Code = https://github.com/cybojenix/django-hybrid
    Bug Tracker = https://github.com/cybojenix/django-hybrid/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities



[options]
zip_safe = True
packages = find:
python_requires = >=3.5
install_requires =
    Django>=1.11
    typing
    typing_extensions
setup_requires =
    pytest-runner

[bdist_wheel]
universal = 1

[aliases]
test=pytest


[tool:pytest]
DJANGO_SETTINGS_MODULE = dj_hybrid.tests.settings
python_files = tests.py test_*.py *_tests.py
addopts = --cov


[isort]
combine_as_imports = true
include_trailing_comma = true
known_first_party = dj_hybrid
line_length = 120
multi_line_output = 3
not_skip = __init__.py
skip_glob = .?*
use_parentheses = true


[mypy]
# strict
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

# django doesn't have stubs yet
ignore_missing_imports = true

[mypy-dj_hybrid.tests.*]
ignore_errors = true


[coverage:run]
branch = True
source = dj_hybrid

[coverage:report]
exclude_lines =
    raise NotImplementedError
    ^\s*\.\.\.(?:\s*#.*)*$
    pass
    if TYPE_CHECKING:
omit =
    dj_hybrid/tests/*
